# Sparkle-Engine

./: .gitmodules  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/src/: Sparkle.h  defines.h  game_type.h  spa_pch.h
Engine/src/core/: Time.cpp  Time.h  application.cpp  application.h  input.cpp  input.h  key_codes.h  logger.cpp  logger.h  spa_assert.h  window.h
Engine/src/renderer/: renderer.cpp  renderer.h  renderer_backend.h
Engine/src/renderer/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_util.cpp  vulkan_utils.h  vulkan_utils.inl
Engine/src/renderer/vulkan/utils/: volken_commandpool.cpp  vulkan_debug.cpp  vulken_commandpool_recorder.cpp  vulken_device.cpp  vulken_framebuffer.cpp  vulken_image.cpp  vulken_renderpass.cpp  vulken_swapchain.cpp  vulken_syncobjects.cpp
Games/testgame/: CMakeLists.txt
Games/testgame/src/: main.cpp
